fixed few layout issues

--- a/src/components/GlowCard/GlowCard.module.css
+++ b/src/components/GlowCard/GlowCard.module.css
@@ -99,8 +99,8 @@
 
 
 .glowCardImg {
-	width: 150px;
-	height: 150px;
+	width: 75px;
+	height: 75px;
 }
 
 .glowCardImgDiv {
